--- a/app/cart/cart.component.html
+++ b/app/cart/cart.component.html
@@ -1,1 +1,6 @@
-cart works!
+<h3>Cart</h3>
+
+<div class="cart-item" *ngFor="let item of items">
+  <span>{{ item.name }}</span>
+  <span>{{ item.price | currency }}</span>
+</div>
